--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,6 @@ find_package(Qt5Core REQUIRED)
 find_package(Qt5Sql REQUIRED)
 find_package(Qt5Network REQUIRED)
 
-add_executable(MiniFender_auth_server main.cpp)
+add_executable(MiniFender_auth_server main.cpp core.cpp core.h dbmanager.cpp dbmanager.h clihandler.cpp clihandler.h authserver.cpp authserver.h)
 
 target_link_libraries(MiniFender_auth_server Qt5::Core Qt5::Sql Qt5::Network)
