--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 configure_file(settings.ini settings/settings.ini COPYONLY)
 
 find_package(Qt5Core REQUIRED)
-find_package(Qt5Sql REQUIRED)
 find_package(Qt5Network REQUIRED)
 
 add_executable(MiniFender_auth_server main.cpp core.cpp core.h clihandler.cpp clihandler.h authserver.cpp authserver.h)
 
-target_link_libraries(MiniFender_auth_server Qt5::Core Qt5::Sql Qt5::Network)
+target_link_libraries(MiniFender_auth_server Qt5::Core Qt5::Network)
